[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/enemies/tile_0015.png" type="Texture" id=1]
[ext_resource path="res://assets/enemies/tile_0016.png" type="Texture" id=2]
[ext_resource path="res://scenes/Enemy.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 9.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 9.5 )

[sub_resource type="CircleShape2D" id=4]
radius = 10.2956

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 1073741825
collision_mask = 1073741824
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 1 )
animation = "run"
frame = 1
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -9.5 )
shape = SubResource( 2 )

[node name="LedgeCheckRight" type="RayCast2D" parent="."]
visible = false
position = Vector2( 5, 0 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="LedgeCheckLeft" type="RayCast2D" parent="."]
visible = false
position = Vector2( -5, 0 )
enabled = true
cast_to = Vector2( 0, 12 )

[node name="HazardArea" type="Area2D" parent="."]
visible = false
collision_layer = 536870912
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2( 0, -9.5 )
shape = SubResource( 3 )

[node name="HitboxArea" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea"]
position = Vector2( 0, -9 )
rotation = -0.560284
shape = SubResource( 4 )
